[package]
name = "brownian_tree"
version = "0.1.0"
authors = ["Felipe Lima <felipecsl@stripe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.22.3"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
js-sys = "0.3.35"
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
